Fix scrollbar bug.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,8 +12,13 @@
 
 */
 
+
+
 html {
     overflow-x: hidden; 
+    overflow-y: scroll;
+
+ 
 
 }
  body {
